--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,17 @@
-<form method="post">
-  <h2>Login</h2>
-  {% if error %}<p style="color:red;">{{ error }}</p>{% endif %}
-  Username: <input name="username"><br>
-  Password: <input name="password" type="password"><br>
-  <button type="submit">Login</button>
-</form>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Login</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <h1>Login</h1>
+    <form method="post">
+        <label>Username:</label>
+        <input type="text" name="username"><br>
+        <label>Password:</label>
+        <input type="password" name="password"><br>
+        <input type="submit" value="Login">
+    </form>
+</body>
+</html>
